[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/mike/mike.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Mike_Old/Mike_Old.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/j3ns/j3ns.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/d4v3/d4v3.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/cutscenes/end/ending.gd" type="Script" id=5]
[ext_resource path="res://assets/rymdskepp_landat.png" type="Texture" id=6]
[ext_resource path="res://scenes/jacobofdarkness/jacobofdarkness.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/god_mike/god_mike.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ljud/blastershot.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/daves.png" type="Texture" id=10]
[ext_resource path="res://assets/ljud/donnerre2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/lightning.jpg" type="Texture" id=12]
[ext_resource path="res://assets/daves_äventyr.png" type="Texture" id=13]
[ext_resource path="res://assets/fonts/comicz.ttf" type="DynamicFontData" id=14]

[sub_resource type="Animation" id=2]
resource_name = "daves_lowered"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Node2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 377.563, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="Animation" id=3]
resource_name = "lightning"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("lightning2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1.03527, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "reveal_god_mike"
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("god_mike:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("god_mike:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -617, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}

[sub_resource type="Animation" id=4]
resource_name = "slut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("slutnod:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "bezier"
tracks/0/path = NodePath("god_mike:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("god_mike:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -617, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 14 )

[node name="end" type="Node2D"]
script = ExtResource( 5 )
midi_music = "res://assets/musik/EP6__The_Emperor's_Arrival.mid"

[node name="lightning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="god_mike" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -617 )

[node name="jacobofdarkness" parent="." instance=ExtResource( 7 )]
position = Vector2( -129.543, 299.8 )

[node name="rymdskepp" type="Sprite" parent="."]
position = Vector2( 1234.36, 511.965 )
texture = ExtResource( 6 )

[node name="d4v3" parent="." instance=ExtResource( 4 )]
position = Vector2( 866.088, 425.641 )
mikepath = NodePath("../mike")

[node name="mike" parent="." instance=ExtResource( 1 )]
position = Vector2( 603.301, 507.069 )
pathfinder_path = NodePath("../Navigation2D")

[node name="Mike_Old" parent="." instance=ExtResource( 2 )]
position = Vector2( 977.125, 305.352 )
mikepath = NodePath("../mike")

[node name="j3ns" parent="." instance=ExtResource( 3 )]
position = Vector2( 714.338, 396.032 )
mikepath = NodePath("../mike")

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 212.535, 709.956 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/daves_lowered = SubResource( 2 )
anims/lightning = SubResource( 3 )
anims/reveal_god_mike = SubResource( 1 )
anims/slut = SubResource( 4 )
anims/start = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 592.999, 615.901 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="Node2D" type="Node2D" parent="."]

[node name="daves" type="Sprite" parent="Node2D"]
position = Vector2( 1.39236, -377.563 )
texture = ExtResource( 10 )
centered = false

[node name="daves2" type="Sprite" parent="Node2D"]
position = Vector2( 948.635, -377.563 )
texture = ExtResource( 10 )
centered = false
flip_h = true

[node name="lightning2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 715.532, 395 )
scale = Vector2( 1.51669, 1.54061 )
texture = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="slutnod" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="ColorRect" type="ColorRect" parent="slutnod"]
margin_left = -189.0
margin_top = -105.0
margin_right = 1568.0
margin_bottom = 973.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="slutnod"]
margin_left = 16.9543
margin_top = 70.0421
margin_right = 287.954
margin_bottom = 223.042
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tack så mycket för att 
du spelade
Mikes Äventyr 3:
\"Mike Slår tillbaka.\"
Av: Biceps Armageddon
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
